--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
@@ -25,51 +25,35 @@
         </div>
     </header>
     <div class="container">
-      <div class="blog-form">
-        <h3 class="titulo">Crear Blog</h3>
-        <form (ngSubmit)="crearBlog()" #form="ngForm">
-          <div class="form-group">
-            <label for="titulo">Título:</label>
-            <input [(ngModel)]="newBlog.titulo" name="titulo" class="form-control" required>
-          </div>
-          <div class="form-group">
-            <label for="urlImagen">Imagen:</label>
-            <input type="file" (change)="onFileSelected($event)" class="form-control-file">
-            <img *ngIf="imagePreview" [src]="imagePreview" alt="Imagen seleccionada" class="blog-image">
-          </div>
-          <div class="form-group">
-            <label for="comentario">Comentario:</label>
-            <textarea [(ngModel)]="newBlog.comentario" name="comentario" class="form-control" required></textarea>
-          </div>
-          <br>
-          <button type="submit" class="btn btn-primary">Guardar</button>
-        </form>
-    </div>
-      
-        <h2 class="subtitulo mt-5">Blogs</h2>
-        <ul class="list-group">
-          <li class="list-group-item" *ngFor="let blog of newsList">
-            <ng-container *ngIf="!editingBlog || blog.id !== editingBlog.id; else editTemplate">
-              <h4>{{ blog.titulo }}</h4>
-              <img *ngIf="blog.urlImagen" [src]="blog.urlImagen" alt="Imagen de blog" class="img-fluid" style="max-width: 200px;">
-              <p>{{ blog.comentario }}</p>
-              <p>Fecha de publicación: {{ blog.fecha | date: 'yyyy-MM-dd' }}</p> <!-- Formatea la fecha -->
-              <button (click)="editBlog(blog)" class="btn btn-primary">Editar</button>
-              <button (click)="deleteBlog(blog.id)" class="btn btn-danger">Eliminar</button>
-            </ng-container>
-            <ng-template #editTemplate>
-              <div class="form-group">
-                <input [(ngModel)]="editingBlog.titulo" class="form-control" />
-              </div>
-              <div class="form-group">
-                <textarea [(ngModel)]="editingBlog.comentario" class="form-control"></textarea>
-              </div>
-              <button (click)="updateBlog()" class="btn btn-success">Guardar</button>
-              <button (click)="cancelEdit()" class="btn btn-secondary">Cancelar</button>
-            </ng-template>
-          </li>
-        </ul>
-      </div>      
+      <h1>Crear Nuevo Blog</h1>
+      <form (submit)="crearBlog()" #blogForm="ngForm">
+        <div class="form-group">
+          <label for="titulo">Título:</label>
+          <input type="text" class="form-control" id="titulo" name="titulo" [(ngModel)]="newBlog.titulo" required>
+        </div>
+        <div class="form-group">
+          <label for="comentario">Comentario:</label>
+          <textarea class="form-control" id="comentario" name="comentario" rows="5" [(ngModel)]="newBlog.comentario" required></textarea>
+        </div>
+        <div class="form-group">
+          <label for="imagen">Imagen:</label>
+          <input type="file" class="form-control-file" id="imagen" name="imagen" (change)="onFileSelected($event)" accept="image/*">
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled]="!blogForm.valid">Crear Blog</button>
+      </form>
+    
+      <h2 class="subtitulo mt-5">Blogs</h2>
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let blog of newsList">
+          <h4>{{ blog.titulo }}</h4>
+          <img *ngIf="blog.urlImagen" [src]="blog.urlImagen" alt="Imagen de blog" class="img-fluid" style="max-width: 200px;">
+          <p>{{ blog.comentario }}</p>
+          <p>Fecha de publicación: {{ blog.fecha | date: 'dd/MM/yyyy' }}</p>
+          <button (click)="editBlog(blog)" class="btn btn-primary">Editar</button>
+          <button (click)="deleteBlog(blog.id)" class="btn btn-danger">Eliminar</button>
+        </li>
+      </ul>
+    </div>          
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
