--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
@@ -24,36 +24,43 @@
             </div>
         </div>
     </header>
-    <div class="container">
-      <h1>Crear Nuevo Blog</h1>
-      <form (submit)="crearBlog()" #blogForm="ngForm">
-        <div class="form-group">
-          <label for="titulo">Título:</label>
-          <input type="text" class="form-control" id="titulo" name="titulo" [(ngModel)]="newBlog.titulo" required>
-        </div>
-        <div class="form-group">
-          <label for="comentario">Comentario:</label>
-          <textarea class="form-control" id="comentario" name="comentario" rows="5" [(ngModel)]="newBlog.comentario" required></textarea>
-        </div>
-        <div class="form-group">
-          <label for="imagen">Imagen:</label>
-          <input type="file" class="form-control-file" id="imagen" name="imagen" (change)="onFileSelected($event)" accept="image/*">
-        </div>
-        <button type="submit" class="btn btn-primary" [disabled]="!blogForm.valid">Crear Blog</button>
-      </form>
-    
-      <h2 class="subtitulo mt-5">Blogs</h2>
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let blog of newsList">
-          <h4>{{ blog.titulo }}</h4>
-          <img *ngIf="blog.urlImagen" [src]="blog.urlImagen" alt="Imagen de blog" class="img-fluid" style="max-width: 200px;">
-          <p>{{ blog.comentario }}</p>
-          <p>Fecha de publicación: {{ blog.fecha | date: 'dd/MM/yyyy' }}</p>
-          <button (click)="editBlog(blog)" class="btn btn-primary">Editar</button>
-          <button (click)="deleteBlog(blog.id)" class="btn btn-danger">Eliminar</button>
-        </li>
-      </ul>
-    </div>          
+    <!-- blog.component.html -->
+<div class="container">
+  <h2>Nuevo Blog</h2>
+  <form (ngSubmit)="crearBlog()" #blogForm="ngForm">
+    <div class="form-group">
+      <label for="titulo">Título:</label>
+      <input type="text" class="form-control" id="titulo" name="titulo" [(ngModel)]="newBlog.titulo" required>
+    </div>
+    <div class="form-group">
+      <label for="comentario">Comentario:</label>
+      <textarea class="form-control" id="comentario" name="comentario" [(ngModel)]="newBlog.comentario" required></textarea>
+    </div>
+    <div class="form-group">
+      <label for="imagen">Imagen Opcional:</label>
+      <input type="file" class="form-control-file" id="imagen" (change)="onFileSelected($event)">
+    </div>
+    <button type="submit" class="btn btn-primary">Crear Blog</button>
+  </form>
+
+  <hr>
+
+  <h2>Lista de Blogs</h2>
+  <div *ngIf="newsList.length > 0; else noBlogs">
+    <div class="card mb-3" *ngFor="let blog of newsList">
+      <div class="card-body">
+        <h5 class="card-title">{{ blog.nombre }}</h5> <!-- Usar la propiedad correcta para el título -->
+        <p class="card-text">{{ blog.comentario }}</p>
+        <img [src]="transformUrl(blog.urlImagen)" class="card-img-top" alt="Imagen Opcional">
+        <button class="btn btn-link" (click)="editBlog(blog)">Editar</button>
+        <button class="btn btn-link" (click)="deleteBlog(blog.id)">Eliminar</button>
+      </div>
+    </div>
+  </div>
+  <ng-template #noBlogs>
+    <p>No hay blogs disponibles.</p>
+  </ng-template>
+</div>          
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
