--- a/sextoTrimestre/proyecto/src/app/components/marlon/horarios/horarios.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/horarios/horarios.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -18,7 +18,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    
+
                 </ul>
             </div>
         </div>
@@ -74,4 +74,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-</html>
+</html> -->
+
+
+<h1>No funcionamos</h1>
